--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "saweria-webhook",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "description": "Saweria webhook handler for Roblox donations",
+  "type": "module",
   "scripts": {
+    "dev": "node server.js",
     "start": "node server.js"
   },
   "dependencies": {
-    "body-parser": "^2.2.0",
-    "express": "^5.1.0",
-    "node-fetch": "^2.7.0",
+    "express": "^4.18.2",
     "cors": "^2.8.5"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
