--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "saweria-webhook",
-  "version": "1.0.0",
+  "version": "1.0.0", 
   "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
